# AudioStreamAirpods

./: CMakeLists.txt  Info.plist
AudioStreamAirpods/: AirpodsIMU.swift  AudioIO.swift  AudioStreamAirpodsApp.swift  AudioTcpClient.swift  AudioTcpServer.swift  AudioUdpClient.swift  AudioUdpServer.swift  Backend.swift  BluetoothCentralManager.swift  BluetoothView.swift  CheckBoxView.swift  ConfigStore.swift  ContentView.swift  H16D320Ch1.swift  H80D10ms16k.swift  H80D320Ch1.swift  HeadMotionScene.swift  HeadMotionSceneView.swift  HeadmotionViewModel.swift  Info.plist  MessageView.swift  MotionSceneView.swift  RingBuffer.swift  RobotScene.swift  SensorView.swift  SensorViewModel.swift  SettingView.swift
AudioStreamAirpods.xcodeproj/: project.pbxproj
AudioStreamAirpods.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
AudioStreamAirpods.xcodeproj/xcuserdata/liu.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
AudioStreamAirpods.xcodeproj/xcuserdata/liu.xcuserdatad/xcschemes/: xcschememanagement.plist
src/gui/: ConfPage.qml  MainPage.qml  main.qml  qml.qrc  qtquickcontrols2.conf
src/objc/: airpodsmotionobjc.h  airpodsmotionobjc.mm  objcapi.h  objcapi.mm
